
1.6.0
---
- small things inside that I forgot to mention
- some new commands for remote control interface:
  - SCAN
  - SAMPLE
  - EQFILE
  - SHOWEQ
- added --keep-open command line flag (for remote control)
- fixed equalizer file parsing to really handle comment lines as example file suggests
- more elaborate detection of UTF-8 locale, also --utf8 switch to force it
- libmpg123 8.3.8:
  - added mpg123_geteq()
  - API cleanup (take const char* for mpg123_open())
  - calm down complainling (C++) compilers by completing the mpg123_channels enum
  - fixed several possible crashes when user provides NULLs where it isn't appropriate
  - workaround for frames that fail decoding (bad frame body, missing bit reservoir): fill up with silence
    That also fixes seeking issues related to bad frames since now the fixed relation between frame and sample offsets is restored.
  - Finally realized what that the resampling code for integer math (generic_nofpu) was just incomplete!
    Now it works, using the defined integer multiplication.
  - Detect UTF-8 in ICY conversion (instead of just assuming CP-1252).

1.5.1
---

- fix wav/au/cdr writing to stdout (bug #2044423)
- add more sensible --no-resync to replace --resync (bug #2044404)
- libmpg123 7.0.7
  - fix thread safety of SSE decoder (bug #2053181)
  - fix robustness of length handling, added mpg123_set_filesize() (bug #2064322) 

1.5.0
---

- libmpg123 6.0.6
  - Floating point decoding back again, (build time choice for now; --with-cpu=generic_float).
  - More robust string handling; extended string API.
  - fixed an (so far) unnoticed ID3 bug that may have obscured comment fields
  - added mpg123_feed() as shortcut; using const input buffer now
  - resync is enabled again for ICY streams (the trouble in the past was due to a reader bug, not the streams)
  - decode ICY text data to UTF-8 (thanks, Thorsten)
  - preserve file flags for timeout mode
- More elaborate (helpful?) error message for output format problems.